2023-07-20T01:38:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5605893718 # 621
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
* notice: last 14d: unq all: 6 31
* notice: prev accum: outdated-unq outdated-all / unq all: 184 410 / 205 444
* notice: next accum: outdated-unq outdated-all / unq all: 186 414 / 206 445
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-07-05] / [2023-07-20]

2023-07-19T08:22:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5596752133 # 619
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-19
* notice: last 14d: unq all: 7 34
* notice: prev accum: outdated-unq outdated-all / unq all: 184 410 / 204 443
* notice: next accum: outdated-unq outdated-all / unq all: 184 410 / 205 444
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-19]

2023-07-18T16:26:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5589973850 # 617
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-18
* notice: last 14d: unq all: 7 33
* notice: prev accum: outdated-unq outdated-all / unq all: 184 410 / 203 442
* notice: next accum: outdated-unq outdated-all / unq all: 184 410 / 204 443
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-18]

2023-07-17T16:27:32Z: