@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-20T01:38:56Z",
+  "timestamp" : "2023-07-21T01:41:14Z",
   "count_outdated" : 414,
   "uniques_outdated" : 186,
-  "count" : 445,
+  "count" : 446,
   "uniques" : 206,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2023-07-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
